--- a/Glampbnb/public/css/global.css
+++ b/Glampbnb/public/css/global.css
@@ -52,10 +52,10 @@ body {
   color: #335576;
   transform: scale(1.3);
 }
-/* 
+
 .navbar__list > a.active-page {
   border-bottom: #db7a4e solid 3px;
-} */
+}
 
 /* Media query for smaller screens */
 @media (max-width: 768px) {
