--- a/Glampbnb/views/main.ejs
+++ b/Glampbnb/views/main.ejs
@@ -1,3 +1,14 @@
+<!-- /*************************************************************************************
+ * WEB322 - 2237 Project
+ * I declare that this assignment is my own work in accordance with the Seneca Academic
+ * Policy. No part of this assignment has been copied manually or electronically from
+ * any other source (including web sites) or distributed to other students.
+ *
+ * Student Name  : Jigar Patel
+ * Student ID    : 118005172
+ * Course/Section: WEB322 NEE
+ *
+ **************************************************************************************/ -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -8,6 +19,7 @@
     <link rel="stylesheet" href="/css/global.css" />
     <link rel="stylesheet" href="/css/rentals.css" />
     <link rel="stylesheet" href="/css/signup.css" />
+    <link rel="stylesheet" href="/css/login.css" />
     <link
       rel="shortcut icon"
       href="/assets/Icons/favicon.svg"
