--- a/views/login.ejs
+++ b/views/login.ejs
@@ -16,7 +16,7 @@
     <form action="/login" method="POST">
       <div class="form-group">
         <label for="email">Email</label>
-        <input type="email" id="email" name="email" />
+        <input type="text" id="email" name="email" />
         <div id="email-error" class="error-message" style="display: <%= errors && errors.email ? 'block' : 'none' %>;">
           <%= errors && errors.email ? errors.email : '' %>
         </div>
