Add routes for cart and rentals-list; still need to work on changin the navbar based on who logs in

--- a/partials/footer.ejs
+++ b/partials/footer.ejs
@@ -25,19 +25,19 @@
         <a href="https://www.instagram.com/"
           ><img
             class="footer__social__logo"
-            src="./assets/Icons/instagram.svg"
+            src="/assets/Icons/instagram.svg"
             alt="Instagram logo"
         /></a>
         <a href="https://www.facebook.com/"
           ><img
             class="footer__social__logo"
-            src="./assets/Icons/facebook.svg"
+            src="/assets/Icons/facebook.svg"
             alt="Facebook logo"
         /></a>
         <a href="https://www.twitter.com/"
           ><img
             class="footer__social__logo"
-            src="./assets/Icons/twitter.svg"
+            src="/assets/Icons/twitter.svg"
             alt="Twitter logo"
         /></a>
       </div>
