--- a/partials/navbar.ejs
+++ b/partials/navbar.ejs
@@ -16,7 +16,7 @@
     <div class="navbar__logo">
       <a href="/">
         <!-- logo sourced from https://www.svgrepo.com/-->
-        <img src="./assets/Icons/glamping-logo.svg" alt="Glampbnb logo" />
+        <img src="/assets/Icons/glamping-logo.svg" alt="Glampbnb logo" />
       </a>
     </div>
     <div class="navbar__menu">
