--- a/views/main.ejs
+++ b/views/main.ejs
@@ -29,7 +29,7 @@
     <title>Glampbnb</title>
   </head>
   <body>
-    <%- include('../partials/navbar') %>
+    <%- include('../partials/navbar', { user: user }) %>
 
     <div class="content">
       <!-- This is where the content from other templates will be inserted -->
