Add loadDataController and load data to mongoDB

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="/css/signup.css" />
     <link rel="stylesheet" href="/css/login.css" />
     <link rel="stylesheet" href="/css/welcome.css" />
+    <link rel="stylesheet" href="/css/loadDataOutcome.css" />
     <link
       rel="shortcut icon"
       href="/assets/Icons/favicon.svg"
