Remove loading data from local file and move everything to mongodb

--- a/partials/rental.ejs
+++ b/partials/rental.ejs
@@ -19,5 +19,5 @@
   <p>Sleeps: <%= rental.numSleeps %></p>
   <p>Bedrooms: <%= rental.numBedrooms %></p>
   <p>Bathrooms: <%= rental.numBathrooms %></p>
-  <p>Price per night: $<%= rental.pricePerNight.toFixed(2) %></p>
+  <p>Price per night: $<%= rental.pricePerNight %></p>
 </div>
