--- a/views/main.ejs
+++ b/views/main.ejs
@@ -21,7 +21,8 @@
     <link rel="stylesheet" href="/css/signup.css" />
     <link rel="stylesheet" href="/css/login.css" />
     <link rel="stylesheet" href="/css/welcome.css" />
-    <link rel="stylesheet" href="/css/loadDataOutcome.css" />
+    <link rel="stylesheet" href="/css/load-data-outcome.css" />
+    <link rel="stylesheet" href="/css/clerk-dashboard.css">
     <link
       rel="shortcut icon"
       href="/assets/Icons/favicon.svg"
