--- a/views/clerkDashboard.ejs
+++ b/views/clerkDashboard.ejs
@@ -3,7 +3,7 @@
     <h1>Clerk Dashboard:</h1>
     <div class="dashboard-actions">
       <button onclick="location.href='/load-data/rentals'">Load Data</button>
-      <button onclick="location.href='/rentals/new'">Add New Property</button>
+      <button onclick="location.href='/rentals/add'">Add New Property</button>
     </div>
   </div>
   
@@ -16,7 +16,7 @@
           <!-- Include other details you want to show for each property -->
         </div>
         <div class="property-actions">
-          <button onclick="location.href='/rentals/edit/<%= rental._id %>'">Edit</button>
+          <button  onclick="location.href='/rentals/edit/<%= rental._id %>'">Edit</button>
           <button onclick="location.href='/rentals/delete/<%= rental._id %>'">Delete</button>
         </div>
       </div>
