--- a/views/login.ejs
+++ b/views/login.ejs
@@ -56,7 +56,7 @@
         </div>
       </div>
       <div class="centered-button">
-        <button type="submit" class="btn">Login</button>
+        <button class="btn" type="submit" >Login</button>
       </div>
     </form>
     <p>Don't have an account? <a href="/signup">Sign up here</a></p>
