--- a/views/signUp.ejs
+++ b/views/signUp.ejs
@@ -59,7 +59,7 @@
         </div>
       </div>
       <div class="centered-button">
-        <button type="submit" class="btn">Sign Up</button>
+        <button class="btn" type="submit">Sign Up</button>
       </div>
     </form>
     <p>Already have an account? <a href="/login">Login here</a></p>
