Change form to accept file uploads; add delete route and confirmation page; finish assignment5 requirements

--- a/public/css/clerk-dashboard.css
+++ b/public/css/clerk-dashboard.css
@@ -66,7 +66,7 @@ button:hover {
   background-color: #db7a4e;
 }
 
-/* Apply a media query for smaller screens */
+/* For smaller screens */
 @media (max-width: 768px) {
   .properties-container {
     grid-template-columns: 1fr; 
