--- a/views/clerkDashboard.ejs
+++ b/views/clerkDashboard.ejs
@@ -13,11 +13,10 @@
         <img src="<%= rental.imageUrl %>" alt="Property Image">
         <div class="property-details">
           <h3><%= rental.headline %></h3>
-          <!-- Include other details you want to show for each property -->
         </div>
         <div class="property-actions">
           <button  onclick="location.href='/rentals/edit/<%= rental._id %>'">Edit</button>
-          <button onclick="location.href='/rentals/delete/<%= rental._id %>'">Delete</button>
+          <button onclick="location.href='/rentals/remove/<%= rental._id %>'">Delete</button>
         </div>
       </div>
     <% }); %>
