--- a/views/rentalAddForm.ejs
+++ b/views/rentalAddForm.ejs
@@ -1,7 +1,7 @@
 <div class="signup-container">
     <div class="centered-content">
       <h1>Add New Rental</h1>
-      <form action="/rentals/add" method="POST">
+      <form action="/rentals/add" method="POST" enctype="multipart/form-data">
         <div class="form-group">
           <label for="headline">Headline</label>
           <input type="text" id="headline" name="headline" required>
@@ -31,8 +31,8 @@
           <input type="text" id="province" name="province" required>
         </div>
         <div class="form-group">
-          <label for="imageUrl">Image URL (ends with jpg or png)</label>
-          <input type="text" id="imageUrl" name="imageUrl" required>
+          <label for="imageUrl">Image File</label>
+          <input type="file" id="imageUrl" name="imageUrl" accept=".jpg, .jpeg, .png, .gif">
         </div>
         <div class="form-group-checkbox">
           <label for="featuredRental">Featured Rental</label>
