--- a/public/css/welcome.css
+++ b/public/css/welcome.css
@@ -1,18 +1,80 @@
 .welcome {
-    padding: 15rem 10rem;
-    color: #335576;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color: #fefaf5;
-  }
-  
-  .welcome h1 {
-    margin-bottom: 1rem; 
-  }
-  
-  .welcome p {
-    margin-top: 1rem; 
-  }
-  
+  padding: 7rem 10rem;
+  color: #335576;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #fefaf5;
+}
+
+.welcome h1 {
+  margin-bottom: 1rem;
+}
+
+.welcome p {
+  margin-top: 1rem;
+}
+
+/* Shopping Cart CSS */
+
+
+.cart-items {
+  max-width: 800px;
+  margin: 10px auto;
+  padding: 10px;
+  background-color: #f4f4f4;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.cart-item {
+  display: flex;
+  border-bottom: 1px solid #ddd;
+  padding: 10px 0;
+}
+
+.cart-item-image {
+  width: auto;
+  height: 15rem;
+  margin-right: 20px;
+}
+
+.cart-item-details {
+  flex-grow: 1;
+  gap: 0px;
+}
+
+.cart-item-details h3 {
+  margin-top: 0;
+}
+
+.checkout-section {
+  text-align: right;
+}
+
+.checkout-section p {
+  margin: 10px 0;
+}
+
+/* Style adjustments for form and buttons */
+input[type=number],
+button {
+  padding: 5px;
+  margin: 5px 0;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+button {
+  background-color: #007BFF;
+  color: white;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #0056b3;
+}
