--- a/views/orderConfirmation.ejs
+++ b/views/orderConfirmation.ejs
@@ -1,5 +1,5 @@
 <div class="welcome">
-    <h1>Lost?</h1>
-    <p>You cannot view this page</p>
+    <h1>Order Confirmation</h1>
+    <p><%= message %></p>
     <a href="/" class="btn">Return to Home</a>
-  </div>
+</div>
