Fix homepage icon address

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -53,14 +53,14 @@
     <div class="features__container">
       <div class="feature">
         <!-- logo sourced from https://www.svgrepo.com/-->
-        <img src="./assets/icons/peace.svg" alt="Peace of Mind Icon" />
+        <img src="./assets/Icons/peace.svg" alt="Peace of Mind Icon" />
         <h3>Peace of Mind</h3>
         <p>Experiences are curated just for you.</p>
       </div>
       <div class="feature">
         <!-- logo sourced from https://www.svgrepo.com/-->
         <img
-          src="./assets/icons/privacy.svg"
+          src="./assets/Icons/privacy.svg"
           alt="Privacy Like Home Icon"
         />
         <h3>Privacy Like Home</h3>
@@ -68,7 +68,7 @@
       </div>
       <div class="feature">
         <!-- logo sourced from https://www.svgrepo.com/-->
-        <img src="./assets/icons/money.svg" alt="More for Less Icon" />
+        <img src="./assets/Icons/money.svg" alt="More for Less Icon" />
         <h3>More for Less</h3>
         <p>Best value with our affordable options.</p>
       </div>
