Refactor edit route to add new image to s3 and remove old one

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -17,7 +17,7 @@
       <div class="hero__title">
         <h1>Glampbnb</h1>
         <p>
-          Experience the beauty of Ontario outdoors with luxury like home.
+          Experience the beauty of Canadian outdoors with luxury like home.
         </p>
         <button class="hero__button">Get Started</button>
       </div>
