Fix navbar active page underline so it works on signup page

--- a/partials/navbar.ejs
+++ b/partials/navbar.ejs
@@ -41,7 +41,7 @@
           <% } %>
         <% } else { %>
           <li class="navbar__list">
-            <a href="/signup" class="<%= content === 'sign-up' ? 'active-page' : '' %>">Signup</a>
+            <a href="/signup" class="<%= content === 'signUp' ? 'active-page' : '' %>">Signup</a>
           </li>
           <li class="navbar__list">
             <a href="/login" class="<%= content === 'login' ? 'active-page' : '' %>">Login</a>
